--- a/src/layouts/default/default.css
+++ b/src/layouts/default/default.css
@@ -1,10 +1,9 @@
 .main {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   align-items: center;
   flex-direction: column;
-  color: #fff;
+  color: #000;
 }
 
 header,
