--- a/src/modules/playground/playground.css
+++ b/src/modules/playground/playground.css
@@ -5,3 +5,23 @@
   justify-content: center;
   align-items: center;
 }
+
+.wrapper {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0;
+}
+
+@media screen and (max-width: 425px) {
+  .wrapper {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .wrapper {
+    flex-direction: column;
+  }
+}
