--- a/src/modules/playground/playground.css
+++ b/src/modules/playground/playground.css
@@ -14,6 +14,15 @@
   margin: 40px 0;
 }
 
+.historyLink {
+  margin: 20px;
+  font-size: 24px;
+}
+
+.historyLink a {
+  margin: 20px;
+}
+
 @media screen and (max-width: 425px) {
   .wrapper {
     flex-direction: column;
